--- a/.github/workflows/ubuntu.yaml
+++ b/.github/workflows/ubuntu.yaml
@@ -6,6 +6,19 @@ on:
 
 jobs:
 
+  sciunit-test-ubuntu-22-04-with-tox:
+      runs-on: ubuntu-22.04
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+        - name: update-pip
+          run: pip3 install --upgrade pip
+        - name: install-tox
+          run: pip3 install tox
+        - name: test-with-tox
+          run: tox
+
   sciunit-test-ubuntu-20-04-with-tox:
       runs-on: ubuntu-latest
       container: geotrust/build-essential:ubuntu20.04
