--- a/.github/workflows/ubuntu.yaml
+++ b/.github/workflows/ubuntu.yaml
@@ -12,8 +12,20 @@ jobs:
         - uses: actions/checkout@v3
           with:
             fetch-depth: 0
+        - name: install-packages  
+          run: sudo apt-get install -y software-properties-common g++-9
+        - name: add-apt-repository
+          run: sudo add-apt-repository ppa:deadsnakes/ppa
+        - name: install-python3  
+          run: sudo apt-get update && sudo apt-get install -y python3.8 python3.8-dev python3.8-distutils
         - name: update-pip
           run: pip3 install --upgrade pip
+        - name: check-compiler
+          run: which g++-9
+        - name: set-compiler-g++-9
+          run: export CMAKE_CXX_COMPILER=/usr/bin/g++-9
+        - name: set-ld-flag
+          run: export LDFLAGs="-Wl,--allow-multiple-definition"
         - name: install-tox
           run: pip3 install tox
         - name: test-with-tox
